# networkx-mcp-server

./: .ci-status-check  .dockerignore  .env.example  .gitignore  .gitmessage  .markdownlint.yml  .pre-commit-config.yaml  .quality-config.json  .releaserc.json  .secrets.baseline  ACTION_PLAN_FINAL.md  ALGORITHM_INTEGRATION_REPORT.md  ARCHITECTURE.md  A_PLUS_PROGRESS_REPORT.md  BARE_EXCEPT_FIX_SUMMARY.md  CHANGELOG.md  CI_CD_CONSOLIDATION_REPORT.md  CI_CD_IMPLEMENTATION_SUMMARY.md  CLEANUP_SUMMARY.md  CONFIG_SCHEMA.md  CONTRIBUTING.md  CRITICAL_SECURITY_FIXES.py  DEPLOYMENT_GUIDE.md  DUAL_MODE_TRANSPORT_GUIDE.md  Dockerfile  Dockerfile.minimal  Dockerfile.multiplatform  Dockerfile.working  EFFICIENCY_REPORT.md  ENTERPRISE_GUIDE.md  FABRICATED_PERFORMANCE_REPORT.md.backup  FEATURE_COMPARISON.md  FEATURE_FLAGS_SUMMARY.md  FINAL_AUDIT_REPORT.md  FINAL_IMPLEMENTATION_SUMMARY.md  FINAL_STATUS_REPORT.md  GITHUB_INTEGRATION_COMPLETE.md  IMPLEMENTATION_PLAN_2025.md  INTEGRATION_REFLECTION.md  JSON_RPC_IMPLEMENTATION_SUMMARY.md  (+162 more)
.githooks/: commit-msg  install.sh  post-commit  pre-commit
.github/: CODEOWNERS  COMMIT_CONVENTIONS.md  CONTRIBUTING.md  FUNDING.yml  GIT_VERSION_CONTROL_STRATEGY.md  README.md  SECURITY.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/codeql/: mcp-security.ql
.github/workflows/: README.md  benchmarks.yml  ci-alerts.yml  ci-webhook-alerts.yml  ci.yml  codeql.yml  continuous-monitoring.yml  dependency-update.yml  deploy.yaml  deploy.yml  docker-build.yml  docs.yml  monitoring.yml  release.yml  security-consolidated.yml  security-scanning-pipeline.yml  security.yml  self-healing-ci.yml  slsa-level3-build.yml  tests.yml  working-tests.yml
archive/servers/: algorithms_v2.py  graph_ops_v2.py  server.py  server_v2.py
benchmarks/: bench_algorithms.py  bench_graph_operations.py  bench_mcp_handlers.py  test_real_performance.py
config/: .env.example  README.md  __init__.py  logging-aggregation.yml  schema.py  settings.py  validation.py
config/examples/: development.yaml  production.yaml  testing.yaml
demos/: knowledge_graph_analysis.md  social_network_analysis.md  transportation_routing.md
docker/: entrypoint.sh
docker/nginx/: nginx-secure.conf  nginx.conf
docker/postgres/: init.sql
docker/prometheus/: prometheus.yml
docs/: ADR-001-remove-heavyweight-dependencies.md  API.md  CI_CD_IMPLEMENTATION_ROADMAP.md  CI_CD_NEXT_GEN_SUMMARY.md  GIT_WORKFLOW.md  MCP_FEATURES.md  QUICKSTART.md  RELEASE_NOTES.md  index.md
docs/api/: README.md
docs/archive/: ACTION_PLAN_FINAL.md  ACTUAL_PERFORMANCE_REPORT.md  ARCHITECTURAL_SURGERY_COMPLETE.md  ARCHITECTURE.md  CLEANUP_PLAN.md  COMPLETION_SUMMARY.md  HONEST_ARCHITECTURE_SUMMARY.md  LAUNCH_ANNOUNCEMENT.md  LAUNCH_EXECUTION_REPORT.md  LAUNCH_METRICS_TRACKER.md  MCP_SECURITY_LEADERSHIP_POSITION.md  MCP_SUBMISSION_TEXT.md  MEMORY_BLOAT_ANALYSIS.md  MESSAGE_TO_USERS.md  MIGRATION_NOTES.md  MIGRATION_NOTICE.md  MIGRATION_TO_MINIMAL.md  MINIMAL_IMPLEMENTATION_SUMMARY.md  MODULARIZATION_PLAN.md  PHASE_4_COMPLETION_SUMMARY.md  PHASE_4_STRATEGIC_LAUNCH_PLAN.md  RELEASE_CHECKLIST.md  RELEASE_NOTES.md  RELEASE_NOTES_v0.1.0-alpha.2.md  RELEASE_READINESS_CHECKLIST.md  RESOURCE_LIMITS.md  SECURITY_IMPROVEMENTS.md  SOCIAL_MEDIA_ANNOUNCEMENTS.md  STRATEGIC_PLAN.md  STRATEGIC_ROADMAP_2025.md  TRANSFORMATION_COMPLETE.md  TRANSPORT_DECISION.md  ULTRA_STRATEGIC_PLAN.md  UPDATE_PLAN.md  WEEK_4_FINAL_METRICS.md  asv.conf.json  claude_desktop_config.json  feature_flags.json  mkdocs.yml  run_tests.sh  (+2 more)
docs/development/: code-quality.md  setup.md
docs/javascripts/: mathjax.js
docs/stylesheets/: extra.css
examples/: README.md  advanced_network_analysis.py  basic_usage.py  citation_network.py  docker_client.py  social_network_analysis.py  storage_integration.py  transportation_network.py  visualization_and_integration_demo.py
fix-env/: pyvenv.cfg
helm/networkx-mcp/: Chart.yaml  values.yaml
k8s/: create-secrets.sh  deployment-production.yaml  deployment.yaml
k8s/production/: canary.yaml  deployment-production.yaml
k8s/staging/: deployment.yaml
monitoring/: README.md  alerts.yaml  grafana-dashboard.json
monitoring/grafana/: dashboard.json  dashboard.yaml
monitoring/prometheus/: alertmanager.yaml  alerts.yaml
scripts/: build.sh  check_ci_status.py  compare_versions.py  deploy.sh  dev_setup.py  final_assessment.py  generate_api_docs.py  git_history_cleanup.sh  honest_benchmark.py  production_readiness.py  release.sh  release_checklist.py  run_coverage_analysis.py  setup-monitoring.sh  setup_git.sh  test_automation.py  trace_imports.py  update_badges.py  validate_architecture_fix.py
src/networkx_mcp/: __init__.py  __main__.py  __version__.py  auth.py  cli.py  errors.py  features.py  graph_cache.py  handlers.py  mcp_mock.py  monitoring.py  monitoring_health.py  monitoring_legacy.py  server.py  server_jsonrpc.py  server_legacy.py  server_minimal.py  server_secure.py  server_v2.py  server_with_storage.py  tool_registry.py
tests/: conftest.py  factories.py  test_actual_tools.py  test_advanced_analytics.py  test_algorithm_integration.py  test_algorithms.py  test_all_transports.py  test_api_improvements.py  test_basic.py  test_brutal_reality_check.py  test_brutally_honest_tools.py  test_ci_basic.py  test_error_handling.py  test_feature_audit.py  test_graph_operations.py  test_integration.py  test_io_handlers.py  test_load_capacity.py  test_mcp_tools.py  test_memory_fixed.py  test_real_redis_persistence.py  test_redis_persistence.py  test_redis_reality.py  test_security_fortress.py  test_server_startup.py  test_simple.py  test_stdio_robustness.py  test_stdio_server.py  test_stress_and_edge_cases.py  test_stress_limits.py  test_unified_service.py  test_visualization.py
tests/coverage/: __init__.py  conftest.py  test_comprehensive_coverage.py
tests/development_archive/: BRUTAL_REALITY_REPORT.md  MCP_IMPLEMENTATION_TEST_REPORT.md  REALISTIC_ROADMAP_2025.md  brutal_reality_check_report.json  mcp_test_config.json  test_fixed_tools.py  (+1 more)
(+291 files in other folders)
