[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "networkx-mcp"
version = "0.1.0-alpha.2"  # Architectural fix version
description = "Actually minimal MCP server for NetworkX operations (54.6MB, not 118MB)"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Bright Liu", email = "brightliu@example.com"}]
maintainers = [{name = "Bright Liu", email = "brightliu@example.com"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.11"
dependencies = [
    "networkx>=3.0",
    "numpy>=1.21.0",  # Required for NetworkX and core algorithms
]

[project.optional-dependencies]
# Development dependencies
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",  # For coverage testing
    "coverage>=7.0.0",  # For coverage reporting
    "black>=24.0.0",
    "ruff>=0.8.0",
    "psutil>=5.9.0",  # For memory testing
    "hypothesis>=6.0.0",  # For property-based testing
    "pandas>=1.3.0",  # For IO handler tests
]

# I/O format support (adds 35MB!)
excel = [
    "pandas>=1.3.0",
    "openpyxl>=3.0.0",
]

# Scientific computing support (adds 15MB!)
scipy = [
    "scipy>=1.7.0",
]

# Full installation with all features (adds 60MB!)
full = [
    "pandas>=1.3.0",
    "scipy>=1.7.0",
    "matplotlib>=3.4.0",
    "openpyxl>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/Bright-L01/networkx-mcp-server"
Repository = "https://github.com/Bright-L01/networkx-mcp-server"
Issues = "https://github.com/Bright-L01/networkx-mcp-server/issues"

[project.scripts]
networkx-mcp = "networkx_mcp.server_minimal:main"  # Default: truly minimal
networkx-mcp-full = "networkx_mcp.server:main"     # With pandas/scipy support

[tool.setuptools.packages.find]
where = ["src"]
include = ["networkx_mcp*"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
]
ignore = ["E501"]  # line too long

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--tb=short",
    "-v",
]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"

[tool.black]
line-length = 88
target-version = ['py311', 'py312']
include = '\.pyi?$'